assets/css/style.css
/* is this working? */
/* body{
  background-color: blue;
} */

/* Import external resoures */
@import url('https://fonts.googleapis.com/css2?family=Edu+TAS+Beginner:wght@400..700&family=Sometype+Mono:ital,wght@0,400..700;1,400..700&display=swap');


/* CSS reset */
* {
  box-sizing: border-box;
  margin: 0 auto;
  padding: 0;
}

/* Utilities */

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Edu TAS Beginner", sans-serif;
  font-weight: 900;
  margin: 0;
}

/* Body */
body {
  background-image: url(../img/cork.png);
}

  /* Header */
  header {
    background-image: url(../img/wall.png);
    padding: 15px;
    text-align: center;
    /* margin: 0 auto; */
    margin-bottom: 40px;
    h1 {
      font-size: 4rem;      
    }
  }


  /* Main */

    
  .photoFrame {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 15px;
    
    .photo {
      display: flex;
      flex-direction: column;
      background-color: #fff;
      padding: 20px;
      margin: 10px;
      flex-basis: 30%;
      position: relative;
      
      
      img.photoImg {
        flex-basis: 100%;
        height: 100%;
      }
      
      
      p {
        font-family: "Sometype Mono", monospace;
        margin: 0;
        padding-top: 20px;
      }
    }
  }

  img.pin {
        width: 35px;
        position: absolute;
        position-area: top;
        top: -8px;
      }

